<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/characters_filters_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_or_padding"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_or_padding">

            <TextView
                android:id="@+id/species_filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/species_filter_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/species_filter_text_view"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/human_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/alien_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alien" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/humanoid_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humanoid" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/mythological_creature_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mythological_creature" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/animal_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/robot_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/robot" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/disease_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/unknown_species_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/status_filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/species_filter_chip_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/status_filter_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_filter_text_view"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/alive_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alive" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dead_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dead" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/unknown_status_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/gender_filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_filter_chip_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/gender_filter_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_filter_text_view"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/male_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/female_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/genderless_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderless" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/unknown_gender_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>