<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_or_padding">

        <ImageView
            android:id="@+id/character_details_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/character_image_description"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/character_details_status_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_or_padding"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_image_view" />

        <TextView
            android:id="@+id/character_details_species_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_status_text_view" />

        <TextView
            android:id="@+id/character_details_type_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_species_text_view" />

        <TextView
            android:id="@+id/character_details_gender_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_type_text_view" />

        <TextView
            android:id="@+id/character_details_origin_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_gender_text_view" />

        <TextView
            android:id="@+id/character_details_location_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_origin_text_view" />

        <TextView
            android:id="@+id/character_details_episodes_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_or_padding"
            android:text="@string/episodes"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_location_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_details_episodes_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_details_episodes_title_text_view"
            app:spanCount="2" />

        <Button
            android:id="@+id/character_details_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_no_wifi"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/character_details_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>